
2014 July 23
============
Fixed bugs:
FIXED: Keys did not repeat themselves.
	Needed for keys like "+" and "-".
FIXED: Starting a new game after winning a previous one makes all texts in the game blue instead of white.

2014 July 24
============
Fixed bugs:
FIXED: When the screen is flashing, there may be black rectangles around the moving objects.
FIXED: Can't do level 7 trick.

2014 August 01
==============
New feature:
DONE: Support LEVELS.DAT

2014 August 04
==============
Fixed bugs:
FIXED: Can't interrupt fading of title screen.
FIXED: (Micro Palace, level 12) If kid is on the very left (in bottom row), then shadow is in wrong direction (looking left), and is constantly turning around.

2014 August 05
==============
(version 1.02)
(Contains all fixes listed above)

2014 August 06
==============
FIXED: (Micro Palace, level 4) After kid enters exit door, chomper bites kid.
FIXED: shadow is partially green when he is looking to the right
FIXED: (Prince of Wateria, level 5 room 3) (palace) Empty potion has red bubbles.
DONE: Support all .DAT files

2014 August 07
==============
(version 1.03)
(Contains all fixes listed above)

2014 August 08
==============
(version 1.04)
FIXED: Made compatible with 64-bit.

2014 August 10
==============
FIXED: If color 0 of a palette was not black, then it was not transparent.
FIXED: PNGs with alpha channel are drawn properly.

2014 August 11
==============
(version 1.05)
(Contains all fixes listed above)

2014 August 23
==============
FIXED: When fighting, parry-attack-parry-attack-... sequences stop when the guard attacks.

2014 August 24
==============
(version 1.06)
DONE: Sound timing (slow-fall and intro needs this)
DONE: Background color of texts in intro and ending
FIXED: prandom(): initialize from current time

2014 August 28
==============
(version 1.07)
FIXED: Under Linux, the game hanged randomly, because the main timer sometimes didn't generate its event.