@@ -726,13 +726,19 @@ const byte tile_mod_tbl[256] = {
 
 // seg006:03F0
 int __pascal far get_tile_div_mod(int xpos) {
+	// Determine tile column (xh) and the position within the tile (xl) from xpos.
+
 	// xpos might be negative if the kid is far off left.
 	// In this case, the array index overflows.
-/*	if (xpos < 0 || xpos >= 256) {
+	if (xpos < 0 || xpos >= 256) {
 		printf("get_tile_div_mod(): xpos = %d\n", xpos);
-	}*/
+	}
+
+// DOS PoP does this:
 //	obj_xl = tile_mod_tbl[xpos];
 //	return tile_div_tbl[xpos];
+
+	// xpos uses a coordinate system in which the left edge of the screen is 58, and each tile is 14 units wide.
 	int x = xpos - 58;
 	int xl = x % 14;
 	int xh = x / 14;
@@ -742,6 +748,37 @@ int __pascal far get_tile_div_mod(int xpos) {
 		// Modulo returns a negative number if x is negative, but we want 0 <= xl < 14.
 		xl += 14;
 	}
+
+	// For compatibility with the DOS version, we allow for overflow access to these tables
+	// Considering the case of negative overflow
+	if (xpos < 0) {
+		// In this case DOS PoP reads the bytes directly before tile_div_tbl[] and tile_mod_tbl[] in the memory.
+		// Here we simulate these reads.
+		// Before tile_mod_tbl[] is tile_div_tbl[], and before tile_div_tbl[] are the following bytes:
+		static const byte bogus[] = {0x02, 0x00, 0x41, 0x00, 0x80, 0x00, 0xBF, 0x00, 0xFE, 0x00, 0xFF, 0x01, 0x01, 0xFF, 0xC4, 0xFF, 0x03, 0x00, 0x42, 0x00, 0x81, 0x00, 0xC0, 0x00, 0xF8, 0xFF, 0x37, 0x00, 0x76, 0x00, 0xB5, 0x00, 0xF4, 0x00};
+		if (COUNT(bogus) + xpos >= 0) {
+			xh = bogus[COUNT(bogus) + xpos]; // simulating tile_div_tbl[xpos]
+			xl = tile_div_tbl[COUNT(tile_div_tbl) + xpos]; // simulating tile_mod_tbl[xpos]
+		} else {
+			printf("xpos = %d (< %ld) out of range for simulation of index overflow!\n", xpos, -COUNT(bogus));
+		}
+	}
+
+	// Considering the case of positive overflow
+	size_t tblSize = COUNT(tile_div_tbl);
+ if (xpos >= tblSize) {
+  // In this case DOS PoP reads the bytes directly after tile_div_tbl[], that is: and tile_mod_tbl[]
+  // Here we simulate these reads.
+  // After tile_mod_tbl[] there are the following bytes:
+  static const byte bogus[] = {0xF4, 0x02, 0x10, 0x1E, 0x2C, 0x3A, 0x48, 0x56, 0x64, 0x72, 0x80, 0x8E, 0x9C, 0xAA, 0xB8, 0xC6, 0xD4, 0xE2, 0xF0, 0xFE, 0x00, 0x0A, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x0A, 0x0D, 0x00, 0x00, 0x00, 0x00};
+  if (xpos-tblSize < COUNT(bogus)) {
+   xh = tile_mod_tbl[xpos-tblSize]; // simulating tile_div_tbl[xpos]
+   xl = bogus[xpos-tblSize]; // simulating tile_mod_tbl[xpos]
+  } else {
+   printf("xpos = %d (> %ld) out of range for simulation of index overflow!\n", xpos, COUNT(bogus)+tblSize);
+  }
+ }
+
 	obj_xl = xl;
 	return xh;
 }
